# viaje_japon

./: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  railway.toml
docs/: notas.md  recursos.md
openclaw/: destinos.md  experiencias.md  gastronomia.md  itinerario.md  logistica.md  notas.md  presupuesto.md
skills/japon-trip/: SKILL.md
skills/japon-trip/references/: destinos.md  practico.md
src/japon/: __init__.py  alerts.py  cli.py  config.py  history.py  monitor.py  scraper.py  telegram_notif.py
